@@ -1,5 +1,7 @@
 2004-01-31  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* cygwin/: Forward port.
+
 	* lily/note-collision.cc (check_meshing_chords): Do not remove
 	dots (from down head) when merging similar heads (thanks Matthias
 	Kilian).  Simplify merge_possible tests and other cleanups
